--- a/css/style.css
+++ b/css/style.css
@@ -45,43 +45,37 @@ body{
     color: var(--bodyc);
 }
 
-body {
+
+.bb {
+    background-color: #474747;
+    color: #fff;
     display: flex;
-    flex-direction: column;
+    text-align: center;
     justify-content: center;
     height: 100vh;
     align-items: center;
-}
-
-
-#box {
-    width: 10rem;
-    height: 10rem;
-    background-color: #000;
-    border-radius: 50%;
-    transition: transform .4s;
-}
-
-#box:hover {
-    transform: scale(1.2);
-    background-color: yellow;
+    white-space: nowrap;
 
 }
 
-#box::before {
-    content:"뭐라고?";
-    color: white;
-    display: flex;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
-    transition: all .4s;
+p {
+    transform: rotate(0deg);
 }
 
-#box:hover::before {
-    content:"맞아";
-    color: black;
+br {
+    display: block;
 }
 
+@media screen and (max-width: 1024px) {
+    .bb {
+        width: 50%;
+    }
 
+    p {
+        transform: rotate(90deg);
+    }
 
+    br {
+        display: none;
+    }
+}
