--- a/css/example.css
+++ b/css/example.css
@@ -1,22 +1,128 @@
+@font-face {
+  font-family: "GL";
+  font-weight: 300;
+  font-style: normal;
+  src: url("https://cdn.jsdelivr.net/gh/webfontworld/gmarket/GmarketSansLight.eot");
+  src: url("https://cdn.jsdelivr.net/gh/webfontworld/gmarket/GmarketSansLight.eot?#iefix") format("embedded-opentype"), url("https://cdn.jsdelivr.net/gh/webfontworld/gmarket/GmarketSansLight.woff2") format("woff2"), url("https://cdn.jsdelivr.net/gh/webfontworld/gmarket/GmarketSansLight.woff") format("woff"), url("https://cdn.jsdelivr.net/gh/webfontworld/gmarket/GmarketSansLight.ttf") format("truetype");
+  font-display: swap;
+}
+@font-face {
+  font-family: "GM";
+  font-weight: 500;
+  font-style: normal;
+  src: url("https://cdn.jsdelivr.net/gh/webfontworld/gmarket/GmarketSansMedium.eot");
+  src: url("https://cdn.jsdelivr.net/gh/webfontworld/gmarket/GmarketSansMedium.eot?#iefix") format("embedded-opentype"), url("https://cdn.jsdelivr.net/gh/webfontworld/gmarket/GmarketSansMedium.woff2") format("woff2"), url("https://cdn.jsdelivr.net/gh/webfontworld/gmarket/GmarketSansMedium.woff") format("woff"), url("https://cdn.jsdelivr.net/gh/webfontworld/gmarket/GmarketSansMedium.ttf") format("truetype");
+  font-display: swap;
+}
+@font-face {
+  font-family: "GB";
+  font-weight: 700;
+  font-style: normal;
+  src: url("https://cdn.jsdelivr.net/gh/webfontworld/gmarket/GmarketSansBold.eot");
+  src: url("https://cdn.jsdelivr.net/gh/webfontworld/gmarket/GmarketSansBold.eot?#iefix") format("embedded-opentype"), url("https://cdn.jsdelivr.net/gh/webfontworld/gmarket/GmarketSansBold.woff2") format("woff2"), url("https://cdn.jsdelivr.net/gh/webfontworld/gmarket/GmarketSansBold.woff") format("woff"), url("https://cdn.jsdelivr.net/gh/webfontworld/gmarket/GmarketSansBold.ttf") format("truetype");
+  font-display: swap;
+}
+:root {
+  --colorGreen: #cedfc3;
+  --colorDGreen: #647367;
+  --colorBg: #f8f8e7;
+  --colorGBg: #d6e3ca;
+  --colorBtn: #ce5561;
+  --bodyc: #474747;
+}
+
+body {
+  font-family: "GM";
+  color: var(--bodyc);
+}
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
 a {
   text-decoration: none;
-  color: #fff;
+  color: white;
 }
 
-dl, ol, ul {
-  margin: 0;
+li {
+  list-style: none;
 }
 
-h1 {
-  margin: 0;
-}
-
-#header {
-  background-color: #333;
-}
-#header .container {
+.container {
   max-width: 1200px;
   margin: 0 auto;
+}
+.container #header {
+  height: 100px;
   display: flex;
-  justify-content: space-between;
+  background-color: purple;
+}
+.container #header .logo {
+  width: 20%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+.container #header .logo a {
+  padding-left: 10px;
+  font-size: 1.8rem;
+}
+.container #header .menu {
+  width: 80%;
+  height: 100%;
+}
+.container #header .menu #gnb {
+  display: flex;
+  align-items: center;
+  height: 100%;
+  justify-content: end;
+  padding-right: 30px;
+  line-height: 100%;
+}
+.container #header .menu #gnb li {
+  height: 100%;
+}
+.container #header .menu #gnb li a {
+  height: 100%;
+  padding: 0 30px;
+  display: flex;
+  align-items: center;
+}
+.container #main .slider {
+  height: 300px;
+  background-color: red;
+}
+.container #main .contents {
+  height: 200px;
+  display: flex;
+}
+.container #main .contents .c1, .container #main .contents .c2, .container #main .contents .c3 {
+  flex: 1;
+}
+.container #main .contents .c2 {
+  background-color: aquamarine;
+}
+.container #main .contents .c3 {
+  background-color: cadetblue;
+}
+.container #footer {
+  height: 100px;
+  display: flex;
+}
+.container #footer .f1 {
+  width: 20%;
+  height: 100%;
+  background-color: deeppink;
+}
+.container #footer .f2 {
+  width: 60%;
+  height: 100%;
+  background-color: darkorange;
+}
+.container #footer .f3 {
+  width: 20%;
+  height: 100%;
+  background-color: darkorchid;
 }
