--- a/css/example.scss
+++ b/css/example.scss
@@ -1,24 +1,162 @@
+
+@font-face {
+    font-family: 'GL';
+    font-weight: 300;
+    font-style: normal;
+    src: url('https://cdn.jsdelivr.net/gh/webfontworld/gmarket/GmarketSansLight.eot');
+    src: url('https://cdn.jsdelivr.net/gh/webfontworld/gmarket/GmarketSansLight.eot?#iefix') format('embedded-opentype'),
+         url('https://cdn.jsdelivr.net/gh/webfontworld/gmarket/GmarketSansLight.woff2') format('woff2'),
+         url('https://cdn.jsdelivr.net/gh/webfontworld/gmarket/GmarketSansLight.woff') format('woff'),
+         url('https://cdn.jsdelivr.net/gh/webfontworld/gmarket/GmarketSansLight.ttf') format("truetype");
+    font-display: swap;
+} 
+@font-face {
+    font-family: 'GM';
+    font-weight: 500;
+    font-style: normal;
+    src: url('https://cdn.jsdelivr.net/gh/webfontworld/gmarket/GmarketSansMedium.eot');
+    src: url('https://cdn.jsdelivr.net/gh/webfontworld/gmarket/GmarketSansMedium.eot?#iefix') format('embedded-opentype'),
+         url('https://cdn.jsdelivr.net/gh/webfontworld/gmarket/GmarketSansMedium.woff2') format('woff2'),
+         url('https://cdn.jsdelivr.net/gh/webfontworld/gmarket/GmarketSansMedium.woff') format('woff'),
+         url('https://cdn.jsdelivr.net/gh/webfontworld/gmarket/GmarketSansMedium.ttf') format("truetype");
+    font-display: swap;
+} 
+@font-face {
+    font-family: 'GB';
+    font-weight: 700;
+    font-style: normal;
+    src: url('https://cdn.jsdelivr.net/gh/webfontworld/gmarket/GmarketSansBold.eot');
+    src: url('https://cdn.jsdelivr.net/gh/webfontworld/gmarket/GmarketSansBold.eot?#iefix') format('embedded-opentype'),
+         url('https://cdn.jsdelivr.net/gh/webfontworld/gmarket/GmarketSansBold.woff2') format('woff2'),
+         url('https://cdn.jsdelivr.net/gh/webfontworld/gmarket/GmarketSansBold.woff') format('woff'),
+         url('https://cdn.jsdelivr.net/gh/webfontworld/gmarket/GmarketSansBold.ttf') format("truetype");
+    font-display: swap;
+} 
+
+:root{
+    --colorGreen : #cedfc3;
+    --colorDGreen : #647367;
+    --colorBg : #f8f8e7;
+    --colorGBg : #d6e3ca;
+    --colorBtn : #ce5561;
+    --bodyc : #474747;
+}
+body{
+    font-family: 'GM';
+    color: var(--bodyc);
+}
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
 a {
     text-decoration: none;
-    color: #fff;
+    color: white;
 }
 
-dl,ol,ul {
-    margin: 0;
+li {
+    list-style: none;
 }
 
-h1 {
-    margin: 0;
-}
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
 
-#header {
-    background-color: #333;
-
-    .container {
-        max-width: 1200px;
-        margin: 0 auto;
+    #header {
+        height: 100px;
         display: flex;
-        justify-content: space-between;
+        background-color: purple;
+
+        .logo {
+            width: 20%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+
+            a {
+                padding-left: 10px;
+                font-size: 1.8rem;
+            }
+
+        }
+
+        .menu {
+            width: 80%;
+            height: 100%;
+
+            #gnb {
+                display: flex;
+                align-items: center;
+                height: 100%;
+                justify-content: end;
+                padding-right: 30px;
+                line-height: 100%;
+
+               li {
+                    height: 100%;
+
+                    a {
+                        height: 100%;
+                        padding: 0 30px;
+                        display: flex;
+                        align-items: center;
+
+                    }
+
+               }
+
+            }
+        }
+    }
+
+    #main {
+        .slider {
+            height: 300px;
+            background-color: red;
+        }
+
+        .contents {
+            height: 200px;
+            display: flex;
+
+            .c1,.c2,.c3 {
+                flex: 1;
+            }
+
+
+            .c2 {
+                background-color:aquamarine;
+            }
+
+            .c3 {
+                background-color:cadetblue;
+            }
+        }
+    }
+
+    #footer {
+        height: 100px;
+        display: flex;
+
+        .f1 {
+            width: 20%;
+            height: 100%;
+            background-color:deeppink;
+        }
+
+        .f2 {
+            width: 60%;
+            height: 100%;
+            background-color:darkorange;
+        }
+
+        .f3 {
+            width: 20%;
+            height: 100%;
+            background-color:darkorchid;
+        }
 
     }
 }
