--- a/css/web.css
+++ b/css/web.css
@@ -73,10 +73,58 @@ a:hover {
     height: 200px;
 }
 
+.tac {
+    text-align: center;
+}
+
+/* layout */
+
 header {
     background-color:chartreuse;
 }
 
-header h1 {
-    width: 20%;
+.d2ul {
+    top: 100%;
+    min-width: 110px;
+    height: 0;
+    overflow: hidden;
+    transition: all .4s;
+    z-index: 100000;
+}
+
+.d1li>a{
+    line-height: 100px;
+    font-size: 1.5rem;
+    padding: 0 2rem;
+    color: #fff;
+}
+
+.d2ul a {
+    display: inline-block;
+    width: 100%;
+    color: #fff;
+    padding: .5rem 0;
+}
+
+.d2ul li {
+    text-align: center;
+}
+
+#gnb:hover .d2ul {
+    height: 150px;
+}
+
+#gnb::after {
+    content:'';
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 100%;
+    background-color: #333;
+    height: 0;
+    transition: all .4s;
+}
+
+#gnb:hover::after {
+    height: 150px;
 }
