--- a/css/web.css
+++ b/css/web.css
@@ -85,7 +85,7 @@ header {
 
 .d2ul {
     top: 100%;
-    min-width: 110px;
+    min-width: 50px;
     height: 0;
     overflow: hidden;
     transition: all .4s;
@@ -97,13 +97,24 @@ header {
     font-size: 1.5rem;
     padding: 0 2rem;
     color: #fff;
+    display: block;
+}
+
+.d1li:hover>a {
+    background-color: white;
+    color:#333;
 }
 
 .d2ul a {
     display: inline-block;
     width: 100%;
     color: #fff;
-    padding: .5rem 0;
+    padding: 1.5rem 0;
+}
+
+.d2ul>li:hover a {
+    background-color:beige;
+    color: #333;
 }
 
 .d2ul li {
@@ -111,7 +122,7 @@ header {
 }
 
 #gnb:hover .d2ul {
-    height: 150px;
+    height: 350px;
 }
 
 #gnb::after {
@@ -126,5 +137,5 @@ header {
 }
 
 #gnb:hover::after {
-    height: 150px;
+    height: 350px;
 }
